--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 </head>
 <body>
     <h1>Photo Gallery of horses</h1>
-    <ul></ul>
+    <ul class="gallery">
+      <li class="thumbnail"><img src="images 1.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 2.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 3.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 4.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 5.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 6.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 7.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 8.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 9.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 10.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 11.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 12.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 13.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 14.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 15.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 16.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 17.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 18.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 19.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 20.jpg" alt=""></li>
+    </ul>
 </body>
 </html>
