zmiana nazwy zdjęć

--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     <link rel="stylesheet" href="styles.css"
 </head>
 <body>
-    <h1>Photo Gallery of horses</h1>
+    <h1>Photo Gallery of Horses</h1>
     <ul class="gallery">
-      <li class="thumbnail"><img src="images 1.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 2.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 3.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 4.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 5.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 6.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 7.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 8.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 9.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 10.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 11.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 12.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 13.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 14.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 15.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 16.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 17.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 18.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 19.jpg" alt=""></li>
-      <li class="thumbnail"><img src="images 20.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images 1.jpg.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images2.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images3.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images4.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images5.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images6.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images7.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images8.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images9.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images10.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images11.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images12.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images13.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images14.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images15.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images16.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images17.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images18.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images19.jpg" alt=""></li>
+      <li class="thumbnail"><img src="images20.jpg" alt=""></li>
     </ul>
 </body>
 </html>
