--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <li class="thumbnail"><img src="images/19.jpg" alt=""></li>
     <li class="thumbnail"><img src="images/20.jpg" alt=""></li>
        </ul>
- 
+<script src="app.js"</script>
+
 </body>
 </html>
