--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <li class="thumbnail"><img src="images/19.jpg" alt=""></li>
     <li class="thumbnail"><img src="images/20.jpg" alt=""></li>
        </ul>
-<script src="app.js"</script>
+       <div class="popup hidden">
+        <img src="images/8.jpg" alt="" class="popup__img">
+       </div>
+<script src="app.js"></script>
 
 </body>
 </html>
