--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     <li class="thumbnail"><img src="images/20.jpg" alt=""></li>
        </ul>
        <div class="popup hidden">
-        <img src="images/8.jpg" alt="" class="popup__img">
+        <button class="popup__close">X</button>
+        <img src="" alt="" class="popup__img">
+        <button class="popup__arrow popup__arrow--left"><</button>
+        <button class="popup__arrow popup__arrow--right">></button>
+    
        </div>
 <script src="app.js"></script>
 
