--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
 <body>
     <h1>Photo Gallery of Horses</h1>
     <ul class="gallery">
-    <li class="thumbnail"><img src="images/1.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/2.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/3.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/4.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/5.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/6.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/7.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/8.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/9.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/10.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/11.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/12.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/13.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/14.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/15.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/16.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/17.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/18.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/19.jpg" alt=""></li>
-    <li class="thumbnail"><img src="images/20.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/1.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/2.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/3.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/4.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/5.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/6.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/7.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/8.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/9.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/10.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/11.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/12.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/13.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/14.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/15.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/16.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/17.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/18.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/19.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="images/20.jpg" alt=""></li>
        </ul>
        <div class="popup hidden">
-        <button class="popup__close">X</button>
+        <button aria-label= "Zamknij popup" class="popup__close">X</button>
         <img src="" alt="" class="popup__img">
-        <button class="popup__arrow popup__arrow--left"><</button>
-        <button class="popup__arrow popup__arrow--right">></button>
+        <button aria-label="Poprzednie zdjęcie" class="popup__arrow popup__arrow--left"><</button>
+        <button aria-label="Nastepne zdjęcie" class="popup__arrow popup__arrow--right">></button>
     
        </div>
 <script src="app.js"></script>
