--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 <body>
     <h1>Photo Gallery of Horses</h1>
     <ul class="gallery">
-    <li class="thumbnail"><img tabindex="0" src="images/1.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/2.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/3.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/4.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/5.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/6.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/7.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/8.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/9.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/10.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/11.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/12.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/13.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/14.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/15.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/16.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/17.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/18.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/19.jpg" alt=""></li>
-    <li class="thumbnail"><img tabindex="0" src="images/20.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/1.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/2.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/3.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/4.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/5.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/6.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/7.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/8.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/9.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/10.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/11.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/12.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/13.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/14.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/15.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/16.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/17.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/18.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/19.jpg" alt=""></li>
+    <li class="thumbnail"><img tabindex="0" src="Images/20.jpg" alt=""></li>
        </ul>
        <div class="popup hidden">
         <button aria-label= "Zamknij popup" class="popup__close">X</button>
